<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/background"
        style="@style/ImageStyle"
        android:contentDescription="@string/an_android_in_the_rain_holding_an_umbrella"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/android" />


    <RelativeLayout
        android:layout_width="@dimen/body_layout_width"
        android:layout_height="@dimen/body_layout_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/body_layout_margin"
        android:layout_marginRight="@dimen/body_layout_margin"
        android:layout_marginTop="@dimen/body_layout_margin"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/nameText"
            style="@style/TextStyle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/name"
            android:textSize="@dimen/name_text_size"
            android:typeface="normal" />

        <TextView
            android:id="@+id/jobText"
            style="@style/TextStyle"
            android:layout_alignStart="@+id/nameText"
            android:layout_below="@+id/nameText"
            android:layout_marginTop="@dimen/zero_margin"
            android:text="@string/job_title"/>

        <TextView
            android:id="@+id/phoneText"
            style="@style/TextStyle"
            android:layout_alignStart="@+id/jobText"
            android:layout_below="@+id/jobText"
            android:text="@string/phone_number"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/websiteText"
            style="@style/TextStyle"
            android:layout_alignStart="@+id/phoneText"
            android:layout_below="@+id/phoneText"
            android:text="@string/website"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/emailText"
            style="@style/TextStyle"
            android:layout_alignStart="@+id/websiteText"
            android:layout_below="@id/websiteText"
            android:layout_marginTop="@dimen/zero_margin"
            android:text="@string/email" />

        <TextView
            android:id="@+id/addressText"
            style="@style/TextStyle"
            android:layout_alignStart="@id/emailText"
            android:layout_below="@id/emailText"
            android:text="@string/address" />

    </RelativeLayout>




</android.support.constraint.ConstraintLayout>